--- a/BlogApi.Client/Components/App.razor
+++ b/BlogApi.Client/Components/App.razor
@@ -15,6 +15,9 @@
 <body>
     <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
+    <script src="js/google-auth.js"></script>
+    <script src="https://accounts.google.com/gsi/client"></script>
 </body>
 
 </html>
