--- a/BlogApi.Client/Components/Layout/Sidebar.razor
+++ b/BlogApi.Client/Components/Layout/Sidebar.razor
@@ -1,4 +1,8 @@
-﻿@rendermode InteractiveServer
+﻿@using BlogApi.Client.Services
+@rendermode InteractiveServer
+@inject GoogleAuthCallbackService GoogleCallback
+@inject IJSRuntime JS
+@implements IDisposable
 
 <div class="drawer-side z-20">
     <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
@@ -101,5 +105,50 @@
                 </span>
             </div>
         </div>
+        <button @onclick="LoginWithGoogle" class="btn bg-white text-black border-[#e5e5e5] w-full">
+            <svg aria-label="Google logo" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><path d="m0 0H512V512H0" fill="#fff"></path><path fill="#34a853" d="M153 292c30 82 118 95 171 60h62v48A192 192 0 0190 341"></path><path fill="#4285f4" d="m386 400a140 175 0 0053-179H260v74h102q-7 37-38 57"></path><path fill="#fbbc02" d="m90 341a208 200 0 010-171l63 49q-12 37 0 73"></path><path fill="#ea4335" d="m153 219c22-69 116-109 179-50l55-54c-78-75-230-72-297 55"></path></g></svg>
+            Login with Google
+        </button>
     </aside>
 </div>
+
+
+@code {
+    private const string GoogleClientId = "981649586366-fv3d4al1foo7u24bigmuhhhu98uq2fd1.apps.googleusercontent.com";
+    private DotNetObjectReference<Sidebar>? _objRef;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _objRef = DotNetObjectReference.Create(this);
+            await JS.InvokeVoidAsync("initGoogleAuth", GoogleClientId, _objRef);
+        }
+    }
+
+    private async Task LoginWithGoogle()
+    {
+        await JS.InvokeVoidAsync("triggerGoogleLogin");
+    }
+
+    [JSInvokable]
+    public async Task HandleGoogleLoginCallback(string idToken)
+    {
+        await GoogleCallback.ProcessLogin(idToken);
+    }
+
+    public void Dispose()
+    {
+        _objRef?.Dispose();
+    }
+}
+
+@*The Flow:
+
+User clicks button → Calls LoginWithGoogle()
+LoginWithGoogle() → Calls JS triggerGoogleLogin()
+triggerGoogleLogin() → Shows Google popup
+User signs in Google popup → Google calls handleGoogleResponse(response)
+handleGoogleResponse() → Calls your C# method HandleGoogleLoginCallback(idToken)
+HandleGoogleLoginCallback() → Calls GoogleCallback.ProcessLogin(idToken)
+ProcessLogin() → Stores token and redirects*@
