--- a/BlogApi.Client/Components/Pages/Admin/CreateBlog.razor
+++ b/BlogApi.Client/Components/Pages/Admin/CreateBlog.razor
@@ -1,4 +1,4 @@
-﻿@*@page "/admin/create-blog"
+﻿@page "/admin/create-blog"
 
 @rendermode InteractiveServer
 @using BlogApi.Application.Dtos
@@ -567,4 +567,4 @@
     {
         Navigation.NavigateTo("/");
     }
-}*@
+}
