--- a/BlogApi.Client/Components/Layout/Sidebar.razor
+++ b/BlogApi.Client/Components/Layout/Sidebar.razor
@@ -134,7 +134,7 @@
     [JSInvokable]
     public async Task HandleGoogleLoginCallback(string idToken)
     {
-       
+        await Task.Delay(100);
         await GoogleCallback.ProcessLogin(idToken);
     }
 
