--- a/BlogApi.Client/Components/Pages/Home.razor
+++ b/BlogApi.Client/Components/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@*@page "/"
+﻿@page "/"
 
 
 
@@ -115,7 +115,7 @@
                 </p>
                 <div class="flex justify-between items-center pt-4 border-t border-gray-200">
                     <span class="text-sm text-gray-600">⏱️ 9 min</span>
-                    <button class="text-blue-600 font-semibold text-sm hover:underline">Read more →</button>
+                    <NavLink href="@($"viewblogconstruct/{10}")" class="text-blue-600 font-semibold text-sm hover:underline">Read more →</NavLink>
                 </div>
             </article>
         </div>
@@ -127,11 +127,13 @@
 @code {
 
 }
-*@
 
 
-@page "/"
+
+@*page "/"
 @using BlogApi.Application.Dtos
+@using BlogApi.Application.Request.Category
+@using BlogApi.Application.Request.Tag
 @using BlogApi.Client.Interface
 @using BlogApi.Client.Security
 @using Microsoft.AspNetCore.Components.Authorization
@@ -139,6 +141,7 @@
 @inject ITagClientService TagService
 @inject AuthStateProvider AuthStateProvider
 @rendermode InteractiveServer
+@inject ICategoryClientService TagClient
 
 <PageTitle>Test Tags - Auth Check</PageTitle>
 
@@ -165,7 +168,7 @@ else if (errorMessage != null)
         <strong>Error:</strong> @errorMessage
     </div>
 }
-else if (tags != null && tags.Any())
+else if (tags != null && tags.Any() && ListCateg != null && tags.Any())
 {
     <div class="alert alert-success">
         <strong>Success!</strong> Found @tags.Count tag(s)
@@ -186,8 +189,21 @@ else if (tags != null && tags.Any())
                     <td>@tag.Name</td>
                 </tr>
             }
+            @foreach (var cat in ListCateg)
+            {
+                <tr>
+                    <td>@cat.Id</td>
+                    <td>@cat.Name</td>
+                </tr>
+            }
         </tbody>
     </table>
+    <EditForm Model="AddCateg" OnValidSubmit="HandleCategory" FormName="AddTagni">
+
+        <InputText @bind-Value="AddCateg.Name"  DisplayName="AddCat" placeholder="Enter Cat name" />
+        <button class="btn" type="submit">Add Category</button>
+
+   </EditForm>
 }
 else
 {
@@ -212,6 +228,32 @@ else
     private bool isLoading = true;
     private string? errorMessage;
     private bool _hasLoaded = false;
+    public AddTagRequest AddTag { get; set; } = new();
+    public AddCategoryRequest AddCateg { get; set; } = new();
+    private List<CategoryDto>? ListCateg;
+
+    public async Task HandleAddTag()
+    {
+        if (!string.IsNullOrEmpty(AddTag.Name))
+        {
+            var request = await TagService.Create(AddTag);
+        }
+
+        Console.WriteLine("Success");
+        await LoadTags();
+        StateHasChanged();
+    }
+    public async Task HandleCategory()
+    {
+        if (!string.IsNullOrEmpty(AddCateg.Name))
+        {
+            var request = await TagClient.Create(AddCateg);
+        }
+         Console.WriteLine("Success cat");
+        await LoadTags();
+        StateHasChanged();
+    }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -240,10 +282,11 @@ else
             errorMessage = null;
 
             var result = await TagService.GetAllTags();
-
-            if (result.IsSuccess && result.Value != null)
+            var cat = await TagClient.GetListing();
+            if (result.IsSuccess && result.Value != null && cat.IsSuccess && cat.Value != null)
             {
                 tags = result.Value;
+                ListCateg = cat.Value;
             }
             else
             {
@@ -260,4 +303,4 @@ else
             StateHasChanged(); // Ensure UI updates
         }
     }
-}
+}*@
