--- a/BlogApi.Client/Components/Pages/User/Profile.razor
+++ b/BlogApi.Client/Components/Pages/User/Profile.razor
@@ -153,7 +153,7 @@
                                 </div>
 
                                 <div class="flex justify-between items-center mb-4">
-                                    <span class="bg-blue-50 text-blue-600 px-3 py-1.5 rounded-md text-xs font-semibold uppercase">Authentication</span>
+                                    <span class="bg-blue-50 text-blue-600 px-3 py-1.5 rounded-md text-xs font-semibold uppercase">@post.CategoryName</span>
                                     <span class="text-sm text-gray-600">Dec 18, 2025</span>
                                 </div>
                                 <h3 class="text-xl font-bold line-clamp-2 mb-3 text-gray-700 leading-snug">
