--- a/BlogApi.Client/wwwroot/css/site.css
+++ b/BlogApi.Client/wwwroot/css/site.css
@@ -43,4 +43,12 @@
 	--depth: 1;
 	--noise: 1;
 }
+#hiddenGoogleButton {
+	position: absolute;
+	left: -9999px;
+	width: 1px;
+	height: 1px;
+	opacity: 0;
+	pointer-events: none;
+}
 
