--- a/BlogApi.Client/wwwroot/css/site.css
+++ b/BlogApi.Client/wwwroot/css/site.css
@@ -52,3 +52,37 @@
 	pointer-events: none;
 }
 
+/*loading spinner  ni*/
+.fullscreen-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.loader-container {
+	text-align: center;
+}
+
+.spinner {
+	border: 4px solid #f3f3f3;
+	border-top: 4px solid #3498db;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	animation: spin 1s linear infinite;
+	margin: 20px auto;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+
+/*blog-content ni*/
